deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: caffeine-vue
  annotations:
    prometheus.io/probe: "true"
spec:
  selector:
    app: caffeine-vue
    env: staging
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
