deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caffeine-vue
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: staging.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: caffeine-vue
          servicePort: 80
